@@ -49,4 +49,11 @@ pixel discarding is an option(used to be otherwise).
 
 
 /*VERSION 0.2.6*/
-*internal framedrop counter
+*Behavior on stream desync has been changed.
+Now, instead of dropping sound buffers, the 
+last image is duplicated. When not recording
+sound this does not apply.
+*Theora return values are now properly checked, 
+to avoid inserting corrupt packages into the stream.
+
+
